update path to Dashboard.ActorView in templates

--- a/app/templates/CommitCommentEvent-template.handlebars
+++ b/app/templates/CommitCommentEvent-template.handlebars
@@ -1,1 +1,1 @@
-{{view DB.ActorView actorBinding="event.actor"}} commented on <a {{bindAttr href="event.payload.comment.html_url"}}>commit</a>
+{{view D.ActorView actorBinding="event.actor"}} commented on <a {{bindAttr href="event.payload.comment.html_url"}}>commit</a>
