--- a/app/templates/ForkEvent-template.handlebars
+++ b/app/templates/ForkEvent-template.handlebars
@@ -1,2 +1,2 @@
-{{view DB.ActorView actorBinding="event.actor"}} forked repo
+{{view D.ActorView actorBinding="event.actor"}} forked repo
 <a {{bindAttr href="event.payload.forkee.html_url"}}>{{event.actor.login}}/{{event.payload.forkee.name}}</a>
