--- a/app/templates/IssueComment-event.handlebars
+++ b/app/templates/IssueComment-event.handlebars
@@ -1,2 +1,2 @@
-{{view DB.ActorView actorBinding="event.actor"}} commented on
+{{view D.ActorView actorBinding="event.actor"}} commented on
 issue <a href="{{unbound event.payload.issue.html_url}}#issuecomment-{{unbound event.payload.comment.id}}">#{{event.payload.issue.number}}</a>: {{event.payload.issue.title}}
