--- a/app/templates/PullRequestEvent-template.handlebars
+++ b/app/templates/PullRequestEvent-template.handlebars
@@ -1,1 +1,1 @@
-{{view DB.ActorView actorBinding="event.actor"}} {{event.payload.action}} Pull Request <a {{bindAttr href="event.payload.pull_request.html_url"}}>#{{event.payload.number}}</a>
+{{view D.ActorView actorBinding="event.actor"}} {{event.payload.action}} Pull Request <a {{bindAttr href="event.payload.pull_request.html_url"}}>#{{event.payload.number}}</a>
