--- a/app/templates/WatchEvent-template.handlebars
+++ b/app/templates/WatchEvent-template.handlebars
@@ -1,1 +1,1 @@
-{{view DB.ActorView actorBinding="event.actor"}} {{event.payload.action}} watching
+{{view D.ActorView actorBinding="event.actor"}} {{event.payload.action}} watching
