--- a/app/templates/questions.handlebars
+++ b/app/templates/questions.handlebars
@@ -1,8 +1,15 @@
 <ul class="unstyled timeline">
-	{{#each questions}}
-	  {{ago "last_activity_date" isSeconds=true}}
-		<li>{{score}}/{{answer_count}} <a {{bindAttr href="link"}} >{{{title}}}</a></li>
-	{{else}}
-		loading latest questions on StackOverflow ...
-	{{/each}}
+  {{#each questions}}
+    {{ago "last_activity_date" isSeconds=true}}
+    <li>
+      <strong>{{score}}</strong> <i class="icon-chevron-up" title="upvotes" ></i> /
+      <strong>{{answer_count}}</strong> <i class="icon-comment" title="answers" ></i> - 
+      <a {{bindAttr href="link"}} >{{{title}}}</a>
+      {{#if is_answered}}
+        <i class="icon-ok" title="answered" ></i>
+      {{/if}}
+    </li>
+  {{else}}
+    loading latest questions on StackOverflow ...
+  {{/each}}
 </ul>
