change title of icon which indicates accepted answer

--- a/app/templates/questions.handlebars
+++ b/app/templates/questions.handlebars
@@ -7,7 +7,7 @@
         <strong>{{answer_count}}</strong> <i class="icon-comment" title="answers" ></i> - 
         <a {{bindAttr href="link"}} >{{{title}}}</a>
         {{#if accepted_answer_id}}
-          <i class="icon-ok" title="answered" ></i>
+          <i class="icon-ok" title="has accepted answer" ></i>
         {{/if}}
       </div>
       <div>
