reformat templates and convert tabs to spaces

--- a/app/templates/github/PushEvent-template.handlebars
+++ b/app/templates/github/PushEvent-template.handlebars
@@ -1,1 +1,2 @@
-{{view D.ActorView actorBinding="event.actor"}} pushed to <a href="https://github.com/emberjs/ember.js/commit/{{unbound event.payload.head}}">{{event.payload.ref}}</a>
+{{view D.ActorView actorBinding="event.actor"}} pushed to
+<a href="https://github.com/emberjs/ember.js/commit/{{unbound event.payload.head}}">{{event.payload.ref}}</a>
