--- a/app/templates/github/CommitCommentEvent-template.handlebars
+++ b/app/templates/github/CommitCommentEvent-template.handlebars
@@ -1,1 +1,3 @@
-{{view D.ActorView actorBinding="event.actor"}} commented on <a {{bindAttr href="event.payload.comment.html_url"}}>commit</a>
+{{#view ActorView actorBinding="event.actor"}}
+  commented on <a {{bindAttr href="event.payload.comment.html_url"}}>commit</a>
+{{/view}}
