--- a/app/templates/github/PushEvent-template.handlebars
+++ b/app/templates/github/PushEvent-template.handlebars
@@ -1,2 +1,4 @@
-{{view D.ActorView actorBinding="event.actor"}} pushed to
-<a href="https://github.com/emberjs/ember.js/commit/{{unbound event.payload.head}}">{{event.payload.ref}}</a>
+{{#view ActorView}}
+  pushed to
+  <a href="https://github.com/emberjs/ember.js/commit/{{unbound event.payload.head}}">{{event.payload.ref}}</a>
+{{/view}}
