--- a/app/templates/github/WatchEvent-template.handlebars
+++ b/app/templates/github/WatchEvent-template.handlebars
@@ -1,1 +1,1 @@
-{{view D.ActorView actorBinding="event.actor"}} {{event.payload.action}} watching
+{{#view ActorView}} {{event.payload.action}} watching{{/view}}
