--- a/app/templates/github/IssueCommentEvent-template.handlebars
+++ b/app/templates/github/IssueCommentEvent-template.handlebars
@@ -1,2 +1,9 @@
-{{view D.ActorView actorBinding="event.actor"}} commented on
-issue <a href="{{unbound event.payload.issue.html_url}}#issuecomment-{{unbound event.payload.comment.id}}">#{{event.payload.issue.number}}</a>: {{event.payload.issue.title}}
+{{#view ActorView}}
+  commented on issue
+  <a href="{{unbound event.payload.issue.html_url}}#issuecomment-{{unbound event.payload.comment.id}}">
+    #{{event.payload.issue.number}}
+  </a>
+{{/view}}
+<div class="additional-info" >
+  {{event.payload.issue.title}}
+</div>
