--- a/app/templates/github/PullRequestEvent-template.handlebars
+++ b/app/templates/github/PullRequestEvent-template.handlebars
@@ -1,1 +1,4 @@
-{{view D.ActorView actorBinding="event.actor"}} {{event.payload.action}} Pull Request <a {{bindAttr href="event.payload.pull_request.html_url"}}>#{{event.payload.number}}</a>
+{{#view ActorView}}
+  {{event.payload.action}} Pull Request
+  <a {{bindAttr href="event.payload.pull_request.html_url"}}>#{{event.payload.number}}</a>
+{{/view}}
