--- a/app/templates/questions.handlebars
+++ b/app/templates/questions.handlebars
@@ -1,21 +1,6 @@
 <ul class="unstyled timeline">
   {{#each questions}}
-    {{ago "last_activity_date" isSeconds=true}}
-    <li>
-      <div>
-        <strong>{{score}}</strong> <i class="icon-chevron-up" title="upvotes" ></i> /
-        <strong>{{answer_count}}</strong> <i class="icon-comment" title="answers" ></i> - 
-        <a {{bindAttr href="link"}} >{{{title}}}</a>
-        {{#if accepted_answer_id}}
-          <i class="icon-ok" title="has accepted answer" ></i>
-        {{/if}}
-      </div>
-      <div>
-        {{#each tags}}
-          <span class="label">{{this}}</span>
-        {{/each}}
-      </div>
-    </li>
+    {{event Dashboard.EventView eventBinding="this"}}
   {{else}}
     loading latest questions on StackOverflow ...
   {{/each}}
