--- a/app/templates/reddit.handlebars
+++ b/app/templates/reddit.handlebars
@@ -1,15 +1,8 @@
-<ul class="unstyled timeline">
-  {{#each entries}}
-    {{ago "created_utc" isSeconds=true}}:
-    <li>
-      <strong>{{ups}}</strong> <i class="icon-chevron-up" title="upvotes" ></i> - 
-      <strong>{{author}}</strong>
-      <a {{bindAttr href="url"}} >{{title}}</a> - 
-      <a href="http://www.reddit.com{{unbound permalink}}">
-        {{num_comments}}
-      </a><i class="icon-comment" title="comments" ></i>
-    </li>
-  {{else}}
-    loading latest reddit entries ...
-  {{/each}}
-</ul>
+{{#with event}}
+  <strong>{{ups}}</strong> <i class="icon-chevron-up" title="upvotes" ></i> - 
+  <strong>{{author}}</strong>
+  <a {{bindAttr href="url"}} >{{title}}</a> - 
+  <a href="http://www.reddit.com{{unbound permalink}}">
+    {{num_comments}}
+  </a><i class="icon-comment" title="comments" ></i>
+{{/with}}
