get rid of current styles to rebuild

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,4 @@
+/*
 div.container-fluid > h1 {
   color: #CD4F1A;
   text-transform: uppercase;
@@ -34,3 +35,4 @@ div.additional-info {
   margin-left: 5px;
   margin-top: 5px;
 }
+*/
