--- a/app/templates/question.handlebars
+++ b/app/templates/question.handlebars
@@ -7,7 +7,7 @@
       <i class="icon-ok" title="has accepted answer" ></i>
     {{/if}}
   </div>
-  <div>
+  <div class="tags">
     {{#each tags}}
       <span class="label">{{this}}</span>
     {{/each}}
